<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="cambiar_clave">Cambiar Clave</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="agregar_inmueble">Agregar Inmueble</string>
    <string name="detalle_inmueble">Detalle Inmueble</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="detalle_inquilino">Detalle Inquilino</string>
    <string name="menu_contratos">Contratos</string>
    <string name="detalle_contrato">Detalle Contrato</string>
    <string name="pagos_contrato">Pagos Contrato</string>
    <string name="menu_salir">Salir</string>
</resources>