<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.ulp.inmobiliaria.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.ulp.inmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarClaveFragment"
            app:destination="@id/cambiarClaveFragment" />
    </fragment>
    <fragment
        android:id="@+id/cambiarClaveFragment"
        android:name="com.ulp.inmobiliaria.ui.perfil.CambiarClaveFragment"
        android:label="@string/cambiar_clave"
        tools:layout="@layout/fragment_cambiar_clave" >
        <action
            android:id="@+id/action_cambiarClaveFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.ulp.inmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_agregarInmuebleFragment"
            app:destination="@id/agregarInmuebleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/agregarInmuebleFragment"
        android:name="com.ulp.inmobiliaria.ui.inmuebles.AgregarInmuebleFragment"
        android:label="@string/agregar_inmueble"
        tools:layout="@layout/fragment_agregar_inmueble" >
        <action
            android:id="@+id/action_agregarInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.ulp.inmobiliaria.ui.inmuebles.DetalleInmuebleFragment"
        android:label="@string/detalle_inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.ulp.inmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detalleInquilinoFragment"
            app:destination="@id/detalleInquilinoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleInquilinoFragment"
        android:name="com.ulp.inmobiliaria.ui.inquilinos.DetalleInquilinoFragment"
        android:label="@string/detalle_inquilino"
        tools:layout="@layout/fragment_detalle_inquilino" >
        <action
            android:id="@+id/action_detalleInquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.ulp.inmobiliaria.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.ulp.inmobiliaria.ui.contratos.DetalleContratoFragment"
        android:label="@string/detalle_contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_detalleContratoFragment_to_pagosContratoFragment"
            app:destination="@id/pagosContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosContratoFragment"
        android:name="com.ulp.inmobiliaria.ui.contratos.PagosContratoFragment"
        android:label="@string/pagos_contrato"
        tools:layout="@layout/fragment_pagos_contrato" >
        <action
            android:id="@+id/action_pagosContratoFragment_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.ulp.inmobiliaria.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />

</navigation>